# waffle

./: .clang-format  .editorconfig  .gitignore  .gitlab-ci.yml  .mailmap  Android.mk  CMakeLists.txt  HACKING.txt  LICENSE  NOTICE.txt  Options.cmake  README  README.md  README.txt  appveyor.yml  meson.build  meson_options.txt  setup-env.sh  waffle.pc.in
doc/: CMakeLists.txt  Doxyfile  building.txt  code-style.txt  meson.build  release-notes.txt  release-process.txt  submitting-patches.txt  todo.txt  versioning-rules.txt
doc/html/man/: index.html
doc/maintainers/: how-to-make-releases.asciidoc
doc/release-notes/: waffle-0.1.txt  waffle-0.2.txt  waffle-0.3.0.txt  waffle-0.3.1.txt  waffle-1.0.0.txt  waffle-1.0.1.txt  waffle-1.1.0.txt  waffle-1.1.1.txt  waffle-1.1.2.txt  waffle-1.2.0.txt  waffle-1.2.1.txt  waffle-1.2.2.txt  waffle-1.2.3.txt  waffle-1.3.0.txt  waffle-1.4.0.txt  waffle-1.4.1.txt  waffle-1.4.2.txt  waffle-1.4.3.txt  waffle-1.4.4.txt  waffle-1.5.0.txt  waffle-1.5.1.txt  waffle-1.5.2.txt  waffle-1.6.0.md  waffle-1.6.1.md  waffle-1.6.2.md  waffle-1.6.3.md  waffle-1.7.0.md  waffle-next.txt
examples/: Android.mk  CMakeLists.txt  Makefile.example  README.txt  gl_basic.c  index.html  meson.build  simple-x11-egl.c
examples/gl_basic.xcodeproj/: Info.plist  MainMenu.xib  project.pbxproj
include/: CMakeLists.txt  c99_compat.h  meson.build
include/waffle/: waffle.h  waffle_attrib_list.h  waffle_config.h  waffle_context.h  waffle_display.h  waffle_dl.h  waffle_enum.h  waffle_error.h  waffle_gl_misc.h  waffle_glx.h  waffle_init.h  waffle_portability.h  waffle_portable.h  waffle_visibility.h  waffle_window.h  waffle_x11_egl.h
include/waffle-1/: .gitignore  meson.build  waffle.h  waffle_gbm.h  waffle_surfaceless_egl.h  waffle_version.h.in  waffle_wayland.h
include/waffle/native/: waffle_glx.h
include/waffle_test/: waffle_test.h
man/: .gitignore  CMakeLists.txt  common.xsl  html.cmake  html.xsl  manpage.css  manpage.xsl  manpages.cmake  meson.build  waffle.7.xml  waffle_attrib_list.3.xml  waffle_config.3.xml  waffle_context.3.xml  waffle_display.3.xml  waffle_dl.3.xml  waffle_enum.3.xml  waffle_error.3.xml  waffle_feature_test_macros.7.xml  waffle_gbm.3.xml  waffle_get_proc_address.3.xml  waffle_gl_misc.3.xml  waffle_glx.3.xml  waffle_init.3.xml  waffle_is_extension_in_string.3.xml  waffle_make_current.3.xml  waffle_native.3.xml  waffle_teardown.3.xml  waffle_wayland.3.xml  waffle_window.3.xml  waffle_x11_egl.3.xml  wflinfo.1.xml
man/common/: author-chad.versace.xml  author-emil.velikov.xml  author-jordan.l.justen.xml  copyright.xml  error-codes.xml  issues.xml  legalnotice.xml  return-value.xml
src/utils/: Android.mk  CMakeLists.txt  meson.build  wflinfo.c
src/waffle/: CMakeLists.txt  meson.build  native.h  unittests.cmake  waffle.def.in
src/waffle/android/: droid_config.c  droid_config.h  droid_context.c  droid_context.h  droid_display.c  droid_display.h  droid_platform.c  droid_platform.h  droid_priv_egl.c  droid_priv_egl.h  droid_surfaceflingerlink.cpp  droid_surfaceflingerlink.h  droid_window.c  droid_window.h
src/waffle/api/: api_object.h  api_priv.c  api_priv.h  waffle_attrib_list.c  waffle_attrib_list_unittest.c  waffle_config.c  waffle_context.c  waffle_display.c  waffle_dl.c  waffle_enum.c  waffle_error.c  waffle_gl_misc.c  waffle_init.c  waffle_window.c
src/waffle/cgl/: WaffleGLView.h  WaffleGLView.m  cgl_config.h  cgl_config.m  cgl_context.h  cgl_context.m  cgl_display.h  cgl_display.m  cgl_dl.h  cgl_dl.m  cgl_error.h  cgl_error.m  cgl_gl_misc.h  cgl_gl_misc.m  cgl_platform.h  cgl_platform.m  cgl_window.h  cgl_window.m
src/waffle/core/: wcore.doxy_include  wcore_attrib_list.c  wcore_attrib_list.h  wcore_attrib_list_unittest.c  wcore_config.h  wcore_config_attrs.c  wcore_config_attrs.h  wcore_config_attrs_unittest.c  wcore_context.h  wcore_display.c  wcore_display.h  wcore_error.c  wcore_error.h  wcore_error_unittest.c  wcore_platform.c  wcore_platform.h  wcore_tinfo.c  wcore_tinfo.h  wcore_util.c  wcore_util.h  wcore_window.h
src/waffle/egl/: egl.h  egl_choose_config.c  egl_native_template.c  egl_native_template.h  egl_no_native.c  egl_no_native.h  wegl_config.c  wegl_config.h  wegl_context.c  wegl_context.h  wegl_display.c  wegl_display.h  wegl_imports.h  wegl_platform.c  wegl_platform.h  wegl_surface.c  wegl_surface.h  wegl_util.c  wegl_util.h  wegl_window.c  wegl_window.h
src/waffle/gbm/: gbm_config.c  gbm_config.h  gbm_context.c  gbm_context.h  gbm_display.c  gbm_display.h  gbm_platform.c  gbm_platform.h  gbm_priv_egl.c  gbm_priv_egl.h  gbm_window.c  gbm_window.h  wgbm_config.c  wgbm_config.h  wgbm_context.c  wgbm_context.h  wgbm_display.c  wgbm_display.h  wgbm_platform.c  wgbm_platform.h  wgbm_priv_egl.c  wgbm_priv_egl.h  wgbm_window.c  wgbm_window.h
src/waffle/glx/: glx.doxy_include  glx_config.c  glx_config.h  glx_context.c  glx_context.h  glx_display.c  glx_display.h  glx_dl.c  glx_dl.h  glx_gl_misc.c  glx_gl_misc.h  glx_platform.c  glx_platform.h  glx_priv_types.h  glx_window.c  glx_window.h  glx_wrappers.h
src/waffle/headless_egl/: headless_display.c  headless_display.h  headless_platform.c  headless_platform.h  headless_window.c  headless_window.h
src/waffle/linux/: linux.doxy_include  linux_dl.c  linux_dl.h  linux_platform.c  linux_platform.h  linux_platform_libs.h
src/waffle/nacl/: nacl_config.c  nacl_config.h  nacl_container.cpp  nacl_container.h  nacl_context.c  nacl_context.h  nacl_display.c  nacl_display.h  nacl_dl.c  nacl_dl.h  nacl_platform.c  nacl_platform.h  nacl_swap_thread.h  nacl_window.c  nacl_window.h
src/waffle/qnx/: qnx_display.c  qnx_display.h  qnx_display_priv.c  qnx_display_priv.h  qnx_platform.c  qnx_platform.h  qnx_window.c  qnx_window.h  qnx_window_priv.c  qnx_window_priv.h
src/waffle/surfaceless_egl/: sl_config.c  sl_config.h  sl_display.c  (+5 more)
tests/: CMakeLists.txt  meson.build
tests/functional/: CMakeLists.txt  gl_basic_cocoa.h  gl_basic_cocoa.m  gl_basic_test.c  meson.build
tests/unittests/: CMakeLists.txt  waffle-unittest.c
tests/waffle_test/: CMakeLists.txt  waffle_test.h  wt_main.c
(+135 files in other folders)
